# src/main/java/com/digitalfactory/alumnoservice/controller/DefaultApiImpl.java
@@ -3,6 +3,7 @@ package com.digitalfactory.alumnoservice.controller;
 import com.digitalfactory.alumnoservice.api.DefaultApi;
 import com.digitalfactory.alumnoservice.model.AlumnoRequest;
 import com.digitalfactory.alumnoservice.model.Alumno;
+import com.digitalfactory.alumnoservice.model.OkResponse;
 import com.digitalfactory.alumnoservice.service.AlumnoService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -11,6 +12,8 @@ import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import java.util.Map;
+
 @Controller
 @RequiredArgsConstructor
 public class DefaultApiImpl implements DefaultApi {
@@ -18,10 +21,10 @@ public class DefaultApiImpl implements DefaultApi {
     private final AlumnoService alumnoService;
 
     @Override
-    public Mono<ResponseEntity<Void>> crearAlumno(Mono<AlumnoRequest> alumnoRequestMono, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<OkResponse>> crearAlumno(Mono<AlumnoRequest> alumnoRequestMono, ServerWebExchange exchange) {
         return alumnoRequestMono
                 .flatMap(alumnoService::crearAlumnoDesdeRequest)
-                .thenReturn(ResponseEntity.noContent().build());
+                .thenReturn(ResponseEntity.ok(new OkResponse().mensaje("ok")));
     }
 
     @Override
